--- a/gumbo/gumbo.cbp
+++ b/gumbo/gumbo.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="libgumbo" prefix_auto="1" extension_auto="1" />
+				<Option output="gumbo" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Debug/" />
 				<Option type="2" />
@@ -19,7 +19,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="libgumbo" prefix_auto="1" extension_auto="1" />
+				<Option output="gumbo" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Release/" />
 				<Option type="2" />
@@ -66,6 +66,10 @@
 		<Unit filename="tag.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="tag_enum.h" />
+		<Unit filename="tag_gperf.h" />
+		<Unit filename="tag_sizes.h" />
+		<Unit filename="tag_strings.h" />
 		<Unit filename="token_type.h" />
 		<Unit filename="tokenizer.c">
 			<Option compilerVar="CC" />
