--- a/SquiLu/Makefile-SquiLu-OSX
+++ b/SquiLu/Makefile-SquiLu-OSX
@@ -5,7 +5,7 @@ INC =  -Iinclude -Isqstdlib -I../myaxtls -I../discount -I../gumbo -I.. -I../mini
     -I/usr/include/mysql -I/usr/include/postgresql -I../unql/src
 #CFLAGS =  -Wall -fno-strict-aliasing -DSQ_JIT_LLVM44=1 -D_DEBUG_DUMP33=1 -DWITH_DAD_EXTRAS=1 -DSQ_SUBLATIN=1 -DNEED_SUBLATIN_C2=1 -DSQUSEDOUBLE=1 -DSQUSEDECIMAL64x=1 -DNO_EXCEPTION_KEY_NOT_FOUND0=1 -D_SQ642=1 -DNO_GARBAGE_COLLECTOR00=1 -DSQLITE_DEFAULT_FILE_FORMAT=4 -DSQLITE_DEFAULT_AUTOVACUUM=1 -DSQLITE_DEFAULT_FOREIGN_KEYS=1 -DSQLITE_ENABLE_COLUMN_METADATA=1 -DSQLITE_ENABLE_EXTENSION_FUNCTIONS=1 -DSQLITE_ENABLE_FTS3=1 -DSQLITE_ENABLE_FTS3_PARENTHESIS=1 -DSQLITE_ENABLE_UNLOCK_NOTIFY=1 -DSQLITE_ENABLE_RTREE=1 -DSQLITE_ENABLE_STAT3=1 -DSQLITE_HAS_CODEC=1 -DSQLITE_OMIT_TCL_VARIABLE=1 -DSQLITE_USE_URI=1 -DSQLITE_SOUNDEX=1 -DNO_POPEN=1 -DNO_SSL_DL=1 -DHAVE_STDINT=1 -DUSE_AXTLS=1 -DUSE_AXTLS_ON_MEMORY=1 -D_FILE_OFFSET_BITS=64 -DSSL_STATIC_LIBRARY=1 -DPDF_USING_ZLIB=1 -DRS232_STATIC=1
 CFLAGS = $(INC) -O3 -Wall -fno-strict-aliasing  \
-    -DCONFIG_32=1 \
+    -DCONFIG_64=1 \
     -D_DEBUG_DUMP33=1 \
     -D_FILE_OFFSET_BITS=64 \
     -DHAS_UNIX_DOMAIN_SOCKETS=1 \
@@ -20,7 +20,7 @@ CFLAGS = $(INC) -O3 -Wall -fno-strict-aliasing  \
     -DPDF_USING_ZLIB=1 \
     -DPROFILE_SQVM0=1 \
     -DRS232_STATIC=1 \
-    -D_SQ64x=1 \
+    -D_SQ64=1 \
     -DSQ_JIT_LLVM44=1 \
     -DSQLITE_DEFAULT_AUTOVACUUM=1 \
     -DSQLITE_DEFAULT_FILE_FORMAT=4 \
@@ -46,7 +46,6 @@ CFLAGS = $(INC) -O3 -Wall -fno-strict-aliasing  \
     -DUSE_OPENSSL2=1 \
     -DUSE_SIGNAL_HANDLER=1 \
     -DWITH_DAD_EXTRAS=1 \
-    -DWITH_MPDECIMAL=1 \
     -DWITH_MYSQL2=1 \
     -DWITH_POSTGRESQL2=1 \
     -DWITH_UUID=1
@@ -56,9 +55,10 @@ RESINC =
 LIBDIR =  -Llib -L../myaxtls -L../mpdecimal -L../discount -L../gumbo -L../minizip -L../unql
 LIB =  -lm
 #LDFLAGS =  -lpthread -lrt -ldl -laxtls -lmpdecimal -ldiscount -lz
-LDFLAGS =  -lpthread -lrt -ldl -luuid -laxtls -lmpdec -ldiscount -lgumbo -lminizip -lz -lunql
+#LDFLAGS =  -lpthread -lrt -ldl -luuid -laxtls -lmpdecimal -ldiscount -lgumbo -lminizip -lz -lunql
+LDFLAGS =  -lpthread -ldl -laxtls -lmpdecimal -ldiscount -lgumbo -lminizip -lz
 CC = gcc
-CXX = g++ -std=c++11
+CXX = g++
 
 SOURCES= sq/sq.c  \
     sqstdlib/sqstdaux.cpp  \
