--- a/SquiLu/Makefile-SquiLu-ios
+++ b/SquiLu/Makefile-SquiLu-ios
@@ -1,7 +1,8 @@
+MYDEVPREFIX=/var/theos/sdks/iPhoneOS8.1.sdk/usr
 
 #INC =  -Iinclude -Isqstdlib -I../myaxtls -I../discount -I/usr/include/postgresql -I/usr/lib/jvm/default-java/include -I/usr/lib/llvm-3.1/include -I../SquiLu-ext/threadObject -I..
 #INC =  -Iinclude -Isqstdlib -I../myaxtls -I../discount -I..
-INC =  -Iinclude -Isqstdlib -I../myaxtls -I../discount -I../gumbo -I.. -I../minizip \
+INC = -I$(MYDEVPREFIX)/include -I$(MYDEVPREFIX)/include/c++/4.2.1 -Iinclude -Isqstdlib -I../myaxtls -I../discount -I../gumbo -I.. -I../minizip \
     -I/usr/include/mysql -I/usr/include/postgresql -I../unql/src
 #CFLAGS =  -Wall -fno-strict-aliasing -DSQ_JIT_LLVM44=1 -D_DEBUG_DUMP33=1 -DWITH_DAD_EXTRAS=1 -DSQ_SUBLATIN=1 -DNEED_SUBLATIN_C2=1 -DSQUSEDOUBLE=1 -DSQUSEDECIMAL64x=1 -DNO_EXCEPTION_KEY_NOT_FOUND0=1 -D_SQ642=1 -DNO_GARBAGE_COLLECTOR00=1 -DSQLITE_DEFAULT_FILE_FORMAT=4 -DSQLITE_DEFAULT_AUTOVACUUM=1 -DSQLITE_DEFAULT_FOREIGN_KEYS=1 -DSQLITE_ENABLE_COLUMN_METADATA=1 -DSQLITE_ENABLE_EXTENSION_FUNCTIONS=1 -DSQLITE_ENABLE_FTS3=1 -DSQLITE_ENABLE_FTS3_PARENTHESIS=1 -DSQLITE_ENABLE_UNLOCK_NOTIFY=1 -DSQLITE_ENABLE_RTREE=1 -DSQLITE_ENABLE_STAT3=1 -DSQLITE_HAS_CODEC=1 -DSQLITE_OMIT_TCL_VARIABLE=1 -DSQLITE_USE_URI=1 -DSQLITE_SOUNDEX=1 -DNO_POPEN=1 -DNO_SSL_DL=1 -DHAVE_STDINT=1 -DUSE_AXTLS=1 -DUSE_AXTLS_ON_MEMORY=1 -D_FILE_OFFSET_BITS=64 -DSSL_STATIC_LIBRARY=1 -DPDF_USING_ZLIB=1 -DRS232_STATIC=1
 CFLAGS = $(INC) -O3 -Wall -fno-strict-aliasing  \
@@ -53,12 +54,13 @@ CFLAGS = $(INC) -O3 -Wall -fno-strict-aliasing  \
 
 RESINC = 
 #LIBDIR =  -Llib -L../myaxtls -L../mpdecimal -L../discount
-LIBDIR =  -Llib -L../myaxtls -L../mpdecimal -L../discount -L../gumbo -L../minizip -L../unql
+LIBDIR = -L$(MYDEVPREFIX)/lib -L$(MYDEVPREFIX)/lib/system -Llib -L../myaxtls -L../mpdecimal -L../discount -L../gumbo -L../minizip -L../unql
 LIB =  -lm
 #LDFLAGS =  -lpthread -lrt -ldl -laxtls -lmpdecimal -ldiscount -lz
-LDFLAGS =  -lpthread -lrt -ldl -luuid -laxtls -lmpdec -ldiscount -lgumbo -lminizip -lz -lunql
-CC = gcc
-CXX = g++ -std=c++11
+#LDFLAGS =  -lpthread -lrt -ldl -luuid -laxtls -lmpdecimal -ldiscount -lgumbo -lminizip -lz -lunql
+LDFLAGS =  -lpthread -ldl -laxtls -lmpdecimal -ldiscount -lgumbo -lminizip -lz -lunql
+CC = clang
+CXX = clang++ -std=c++11
 
 SOURCES= sq/sq.c  \
     sqstdlib/sqstdaux.cpp  \
@@ -76,12 +78,12 @@ SOURCES= sq/sq.c  \
     ../SquiLu-ext/pdf-font.cpp  \
     ../SquiLu-ext/sq_axtls.c  \
     ../SquiLu-ext/sq_base64.cpp  \
-    ../SquiLu-ext/sq_decimal.cpp  \
     ../SquiLu-ext/sq_fpdf.cpp  \
     ../SquiLu-ext/sq_fs.c  \
     ../SquiLu-ext/sq_gumbo.cpp  \
     ../SquiLu-ext/sqlite3.c  \
     ../SquiLu-ext/sq_unql.c  \
+    ../SquiLu-ext/sq_decimal.c  \
     ../SquiLu-ext/sq_markdown.cpp  \
     ../SquiLu-ext/sq_mix.c \
     ../SquiLu-ext/sq_mongoose.cpp  \
