--- a/SquiLu/squilu.cbp
+++ b/SquiLu/squilu.cbp
@@ -419,7 +419,6 @@
 					<Add directory="../flu" />
 				</Compiler>
 				<Linker>
-					<Add option="-s" />
 					<Add library="pthread" />
 					<Add library="rt" />
 					<Add library="dl" />
@@ -448,15 +447,14 @@
 			</Target>
 			<Target title="Debug 64bits">
 				<Option output="bin/squilu-dbg" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/Debug/" />
+				<Option object_output="obj/Debug-no-gui/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Option parameters="test-socket-unix-server.nut" />
 				<Compiler>
-					<Add option="-O2" />
 					<Add option="-Wall" />
 					<Add option="-g" />
-					<Add option="-DNDEBUG=1" />
+					<Add option="-DNDEBUG2=1" />
 					<Add option="-DWITH_FULL_DAD_EXTRAS=1" />
 					<Add option="-D_SQ64=1" />
 					<Add option="-DCONFIG_64=1" />
@@ -552,7 +550,6 @@
 					<Add directory="../flu" />
 				</Compiler>
 				<Linker>
-					<Add option="-s" />
 					<Add library="pthread" />
 					<Add library="rt" />
 					<Add library="dl" />
@@ -597,7 +594,6 @@
 					<Add directory="../../zeromq-3.2.2/include" />
 				</Compiler>
 				<Linker>
-					<Add option="-s" />
 					<Add library="pthread" />
 					<Add library="rt" />
 					<Add library="dl" />
@@ -620,7 +616,7 @@
 					<Add option="-Wall" />
 					<Add option="-g" />
 					<Add option="-DWITH_FLTK=1" />
-					<Add option="-DNDEBUG=1" />
+					<Add option="-DNDEBUG2=1" />
 					<Add option="-DWITH_FULL_DAD_EXTRAS=1" />
 					<Add option="-DPROFILE_SQVM22=1" />
 					<Add option="-D_SQ64=1" />
@@ -721,12 +717,97 @@
 					<Add directory="../libharu/src" />
 				</Linker>
 			</Target>
+			<Target title="Debug 64bits static Library">
+				<Option output="bin/squilu-dbg" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="" />
+				<Option object_output="obj/Debug/" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-Wall" />
+					<Add option="-DNDEBUG2=1" />
+					<Add option="-DWITH_FULL_DAD_EXTRAS=1" />
+					<Add option="-D_SQ64=1" />
+					<Add option="-DCONFIG_64=1" />
+					<Add option="-DHAS_UNIX_DOMAIN_SOCKETS=1" />
+					<Add option="-DUSE_SIGNAL_HANDLER=1" />
+					<Add option="-DWITH_MYSQL=1" />
+					<Add option="-DWITH_POSTGRESQL=1" />
+					<Add directory="../../zeromq-3.2.2/include" />
+				</Compiler>
+				<Linker>
+					<Add library="pthread" />
+					<Add library="rt" />
+					<Add library="dl" />
+					<Add library="axtls" />
+					<Add library="mpdecimal" />
+					<Add library="discount" />
+					<Add library="fltk_z" />
+					<Add directory="../../zeromq-3.2.2" />
+					<Add directory="../fltk/lib" />
+				</Linker>
+			</Target>
+			<Target title="Temp Code FLTK 64bits">
+				<Option output="bin/squilu-tmp" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="../db-api/tools" />
+				<Option object_output="obj/Debug-tmp/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Option parameters="check-function-calls.nut" />
+				<Compiler>
+					<Add option="-Wall" />
+					<Add option="-g" />
+					<Add option="-DWITH_FLTK=1" />
+					<Add option="-DNDEBUG=1" />
+					<Add option="-DWITH_FULL_DAD_EXTRAS=1" />
+					<Add option="-DPROFILE_SQVM22=1" />
+					<Add option="-D_SQ64=1" />
+					<Add option="-DCONFIG_64=1" />
+					<Add option="-DHAS_UNIX_DOMAIN_SOCKETS=1" />
+					<Add option="-DUSE_SIGNAL_HANDLER=1" />
+					<Add option="-DWITH_MYSQL=1" />
+					<Add option="-DWITH_POSTGRESQL=1" />
+					<Add option="-DWITH_DNS_SD2=1" />
+					<Add option="-DSQLITE_DEBUG=1" />
+					<Add option="-DSQLITE_ENABLE_EXPLAIN_COMMENTS=1" />
+					<Add directory="../../zeromq-3.2.2/include" />
+					<Add directory="../fltk" />
+					<Add directory="../libharu/include" />
+					<Add directory="../flu" />
+				</Compiler>
+				<Linker>
+					<Add library="pthread" />
+					<Add library="rt" />
+					<Add library="dl" />
+					<Add library="fltkutils" />
+					<Add library="fltk_images" />
+					<Add library="fltk_png" />
+					<Add library="fltk_jpeg" />
+					<Add library="fltk_z" />
+					<Add library="fltk" />
+					<Add library="Xext" />
+					<Add library="Xft" />
+					<Add library="Xinerama" />
+					<Add library="mpdecimal" />
+					<Add library="hpdfs" />
+					<Add library="discount" />
+					<Add library="X11" />
+					<Add library="fontconfig" />
+					<Add library="axtls" />
+					<Add library="Xcursor" />
+					<Add library="Xfixes" />
+					<Add directory="../../zeromq-3.2.2" />
+					<Add directory="../fltk/lib" />
+					<Add directory="../flu" />
+					<Add directory="../libharu/src" />
+				</Linker>
+			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-std=c++11" />
 			<Add option="-Wall" />
 			<Add option="-fno-strict-aliasing" />
-			<Add option="-fno-rtti" />
-			<Add option="-fno-exceptions" />
+			<Add option="-DSC_USE_MKSTEMP=1" />
 			<Add option="-DONLY_ASCII=1" />
 			<Add option="-DPROFILE_SQVM0=1" />
 			<Add option="-DSQ_JIT_LLVM44=1" />
@@ -769,6 +850,7 @@
 			<Add option="-DWITH_FFI=1" />
 			<Add option="-DWITH_POSTGRESQL=1" />
 			<Add option="-DWITH_LIBCLANG=1" />
+			<Add option="-DWITH_MPDECIMAL=1" />
 			<Add directory="include" />
 			<Add directory="sqstdlib" />
 			<Add directory="../myaxtls" />
@@ -809,6 +891,11 @@
 			<Option target="Release alone wince" />
 			<Option target="Release wince" />
 		</Unit>
+		<Unit filename="../SquiLu-ext/civetweb.c">
+			<Option compilerVar="CC" />
+			<Option target="Temp Code FLTK 64bits" />
+		</Unit>
+		<Unit filename="../SquiLu-ext/civetweb.h" />
 		<Unit filename="../SquiLu-ext/code_mix_prep.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -831,6 +918,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/dynamic_library.h">
 			<Option target="Debug" />
@@ -850,6 +939,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/fpdf.cpp">
 			<Option target="Debug" />
@@ -907,6 +998,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/lua_socket.h">
 			<Option target="Debug" />
@@ -926,6 +1019,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/mongoose.c">
 			<Option compilerVar="CC" />
@@ -946,6 +1041,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/mongoose.h">
 			<Option target="Debug" />
@@ -965,6 +1062,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/pdf-font.cpp">
 			<Option target="Debug" />
@@ -984,6 +1083,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/pdf-font.h">
 			<Option target="Debug" />
@@ -1003,6 +1104,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_axtls.c">
 			<Option compilerVar="CC" />
@@ -1023,6 +1126,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_base64.cpp">
 			<Option target="Debug" />
@@ -1042,6 +1147,11 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
+		</Unit>
+		<Unit filename="../SquiLu-ext/sq_civetweb.cpp">
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_decimal.cpp">
 			<Option target="Debug" />
@@ -1060,6 +1170,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_dns_sd.cpp" />
 		<Unit filename="../SquiLu-ext/sq_fastcgi.cpp">
@@ -1084,6 +1196,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_fpdf.cpp">
 			<Option target="Debug" />
@@ -1123,6 +1237,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_gumbo.cpp" />
 		<Unit filename="../SquiLu-ext/sq_libclang.cpp" />
@@ -1143,6 +1259,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_mix.cpp">
 			<Option target="Debug" />
@@ -1162,6 +1280,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_mongoose.cpp">
 			<Option target="Debug" />
@@ -1181,6 +1301,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_mysql.cpp" />
 		<Unit filename="../SquiLu-ext/sq_openssl.cpp">
@@ -1203,6 +1325,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_postgresql.cpp">
 			<Option target="Debug" />
@@ -1221,6 +1345,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_rs232.c">
 			<Option compilerVar="CC" />
@@ -1241,6 +1367,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_slave_vm.cpp">
 			<Option target="Debug" />
@@ -1260,6 +1388,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_socket.cpp">
 			<Option target="Debug" />
@@ -1279,6 +1409,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_sqlite3.cpp">
 			<Option target="Debug" />
@@ -1298,6 +1430,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_sqlite3.h" />
 		<Unit filename="../SquiLu-ext/sq_sys.cpp">
@@ -1321,6 +1455,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_unql.cpp" />
 		<Unit filename="../SquiLu-ext/sq_zlib.cpp">
@@ -1341,6 +1477,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqlite3.c">
 			<Option compilerVar="CC" />
@@ -1361,6 +1499,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqlite3.h">
 			<Option target="Debug" />
@@ -1380,6 +1520,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqmodule.h">
 			<Option target="Debug" />
@@ -1399,6 +1541,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqratimport.cpp">
 			<Option target="Debug" />
@@ -1418,6 +1562,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqratimport.h">
 			<Option target="Debug" />
@@ -1437,6 +1583,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/tinyxml2.cpp">
 			<Option target="Debug" />
@@ -1456,6 +1604,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/tinyxml2.h">
 			<Option target="Debug" />
@@ -1475,6 +1625,8 @@
 			<Option target="Release 64bits static Library" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="dadbiz.rc">
 			<Option compilerVar="WINDRES" />
@@ -1488,6 +1640,7 @@
 		<Unit filename="include/sqstdmath.h" />
 		<Unit filename="include/sqstdstring.h" />
 		<Unit filename="include/sqstdsystem.h" />
+		<Unit filename="include/squilu.hpp" />
 		<Unit filename="include/squirrel.h" />
 		<Unit filename="sq/sq.c">
 			<Option compilerVar="CC" />
@@ -1508,6 +1661,7 @@
 			<Option target="Release FLTK 64bits Computed Gotos" />
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Temp Code FLTK 64bits" />
 		</Unit>
 		<Unit filename="sqstdlib/sqstdaux.cpp" />
 		<Unit filename="sqstdlib/sqstdblob.cpp" />
